[package]
name = "bevy_dioxus"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
dioxus = { version = "0.4", default-features = false, features = [
    "macro",
    "hooks",
] }
dioxus-rsx = { version = "0.4", default-features = false, features = [
    "hot_reload",
], optional = true }
dioxus-hot-reload = { version = "0.4", default-features = false, features = [
    "custom_file_watcher",
], optional = true }
bevy_mod_picking = { version = "0.17", default-features = false, features = [
    "backend_bevy_ui",
] }

[features]
hot_reload = ["dioxus/hot-reload", "dioxus-rsx", "dioxus-hot-reload"]

[patch.crates-io]
bevy_app = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_asset = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_core = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_ecs = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_hierarchy = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_input = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_math = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_reflect = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_render = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_transform = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_ui = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_utils = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }
bevy_window = { git = "https://github.com/JMS55/bevy", branch = "query_new_12" }

[[example]]
name = "demo"
