[package]
name = "bevy_dioxus"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_mod_picking = { version = "0.18", default-features = false, features = [
    "backend_bevy_ui",
] }
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "fix-event-bubbling", default-features = false, features = [
    "macro",
    "hooks",
] }
dioxus-rsx = { git = "https://github.com/ealmloff/dioxus", branch = "fix-event-bubbling", default-features = false, features = [
    "hot_reload",
], optional = true }
dioxus-hot-reload = { git = "https://github.com/ealmloff/dioxus", branch = "fix-event-bubbling", default-features = false, features = [
    "custom_file_watcher",
], optional = true }

[features]
hot_reload = ["dioxus/hot-reload", "dioxus-rsx", "dioxus-hot-reload"]

[[example]]
name = "demo"
